Moving to patched scala version 2.12.17